All of the refactorings

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>SWXTMG</title>
   </head>
   <body>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
